--- a/building-java-17-docker-image/Dockerfile
+++ b/building-java-17-docker-image/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:20.04
 
-ENV PATH=$PATH:/usr/lib/jvm/java-17-openjdk-amd64/bin/java
+ENV PATH=$PATH:/opt/java/jdk-18/bin
 
-RUN apt install openjdk-17-jre-headless
+RUN  apt-get update && apt-get upgrade && apt-get -y install curl && mkdir /opt/java && \
+    curl https://download.oracle.com/java/18/latest/jdk-18_linux-x64_bin.tar.gz --output 'jdk-18_linux-x64_bin.tar.gz' \
+	&& tar -zxvf jdk-18_linux-x64_bin.tar.gz && mv jdk-18 /opt/java/jdk-18
