openjdk:18 dockerfile updated

--- a/building-java-18-docker-image/Dockerfile
+++ b/building-java-18-docker-image/Dockerfile
@@ -4,7 +4,7 @@ ENV PATH=$PATH:/opt/java/jdk-18/bin
 
 RUN  apt-get update \
 	&& apt-get upgrade \
-	&& apt-get -y install curl \
+	&& apt-get install -y curl \
 	&& mkdir /opt/java \
 	&& curl https://download.oracle.com/java/18/latest/jdk-18_linux-x64_bin.tar.gz --output 'jdk-18_linux-x64_bin.tar.gz' \
 	&& tar -zxvf jdk-18_linux-x64_bin.tar.gz \
