--- a/hello-servlet/Dockerfile
+++ b/hello-servlet/Dockerfile
@@ -1,1 +1,10 @@
-#FROM
+FROM mainul35/tomcat:10
+
+RUN rm -rf /usr/local/tomcat/webapps/* \
+    && mv ./target/*.war ROOT.war
+
+EXPOSE 8080:8080
+
+COPY ./target/ROOT.war /usr/local/tomcat/webapps/ROOT.war
+
+CMD ["/opt/tomcat/apache-tomcat-10.0.18/bin/catalina.sh", "run"]
