hello-servlet docker file updated

--- a/hello-servlet/Dockerfile
+++ b/hello-servlet/Dockerfile
@@ -1,7 +1,8 @@
 FROM mainul35/tomcat:10
 
 RUN rm -rf /usr/local/tomcat/webapps/* \
-    && mv ./target/*.war ROOT.war
+    && mvn clean install \
+    && mv ./target/hello-servlet-1.0.0-SNAPSHOT.war ROOT.war
 
 EXPOSE 8080:8080
 
