--- a/hello-servlet/Dockerfile
+++ b/hello-servlet/Dockerfile
@@ -4,6 +4,6 @@ RUN rm -rf /usr/local/tomcat/webapps/*
 
 EXPOSE 8080:8080
 
-COPY ./target/hello-servlet-1.0.0-SNAPSHOT.war /usr/local/tomcat/webapps/ROOT.war
+COPY ./target/hello-servlet-1.0.0-SNAPSHOT.war /opt/tomcat/apache-tomcat-10.0.18/webapps/ROOT.war
 
 CMD ["/opt/tomcat/apache-tomcat-10.0.18/bin/catalina.sh", "run"]
