requestParam and post method example

--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,6 @@
     <packaging>pom</packaging>
     <modules>
         <module>hello-servlet</module>
+        <module>servlet-with-request-param</module>
     </modules>
 </project>
