--- a/building-java-18-docker-image/Dockerfile
+++ b/building-java-18-docker-image/Dockerfile
@@ -2,14 +2,13 @@ FROM ubuntu:20.04
 
 ENV PATH=$PATH:/opt/java/jdk-18/bin
 
-RUN  apt-get update \
-	&& apt-get upgrade \
-	&& apt-get install curl -y \
-	&& mkdir /opt/java \
-	&& curl https://download.oracle.com/java/18/latest/jdk-18_linux-x64_bin.tar.gz --output 'jdk-18_linux-x64_bin.tar.gz' \
-	&& tar -zxvf jdk-18_linux-x64_bin.tar.gz \
-	&& rm jdk-18_linux-x64_bin.tar.gz \
-	&& mv jdk-18 /opt/java/jdk-18 \
-	&& apt-get purge -y curl \
-    	&& apt-get autoremove -y \
-    	&& apt-get clean
+RUN apt-get update
+RUN apt-get install -y curl
+RUN mkdir /opt/java
+RUN curl https://download.oracle.com/java/18/latest/jdk-18_linux-x64_bin.tar.gz --output 'jdk-18_linux-x64_bin.tar.gz'
+RUN tar -zxvf jdk-18_linux-x64_bin.tar.gz
+RUN rm jdk-18_linux-x64_bin.tar.gz
+RUN mv jdk-18 /opt/java/jdk-18
+RUN apt-get purge -y curl
+RUN apt-get autoremove -y
+RUN apt-get clean
