--- a/building-tomcat10-image/Dockerfile
+++ b/building-tomcat10-image/Dockerfile
@@ -3,7 +3,7 @@ FROM jdk:18
 RUN apt-get update
 RUN apt-get upgrade -y
 RUN apt-get install -y curl
-RUN curl https://dlcdn.apache.org/tomcat/tomcat-10/v10.0.18/bin/apache-tomcat-10.0.18.tar.gz --output 'tomcat-10.0.18.tar.gz'
+RUN curl https://archive.apache.org/dist/tomcat/tomcat-10/v10.0.20/bin/apache-tomcat-10.0.20.tar.gz --output 'tomcat-10.0.18.tar.gz'
 RUN tar -zxvf tomcat-10.0.18.tar.gz
 RUN rm tomcat-10.0.18.tar.gz
 RUN mkdir /opt/tomcat
