--- a/building-tomcat10-image/Dockerfile
+++ b/building-tomcat10-image/Dockerfile
@@ -1,20 +1,5 @@
 FROM jdk:18
 
-RUN apt-get update
-RUN apt-get upgrade -y
-RUN apt-get install -y curl
-RUN curl https://archive.apache.org/dist/tomcat/tomcat-10/v10.0.20/bin/apache-tomcat-10.0.20.tar.gz --output 'tomcat-10.0.18.tar.gz'
-RUN tar -zxvf tomcat-10.0.18.tar.gz
-RUN rm tomcat-10.0.18.tar.gz
-RUN mkdir /opt/tomcat
-RUN mv apache-tomcat-10.0.18/ /opt/tomcat/
-RUN apt-get purge -y curl
-RUN apt-get autoremove -y
-RUN apt-get clean
+COPY ../../../../Downloads/apache-tomcat-10.0.20/ ./tomcat-10
 
-WORKDIR /opt/tomcat/apache-tomcat-10.0.18/bin/
-
-EXPOSE 8080:8080
-
-CMD ["catalina.sh", "run"]
-
+CMD ["./tomcat-10/bin/catalina.sh", "run"]
