--- a/servlet-with-request-param/Dockerfile
+++ b/servlet-with-request-param/Dockerfile
@@ -1,9 +1,7 @@
-FROM mainul35/tomcat:10
+FROM tomcat:10
 
-RUN rm -rf /opt/tomcat/apache-tomcat-10.0.18/webapps/*
+RUN rm -rf ./apache-tomcat-10.0.20/webapps/*
 
-EXPOSE 8080:8080
+COPY ./target/servlet-with-request-param-1.0.0-SNAPSHOT.war ./apache-tomcat-10.0.20/webapps/ROOT.war
 
-COPY ./target/hello-servlet-1.0.0-SNAPSHOT.war /opt/tomcat/apache-tomcat-10.0.18/webapps/ROOT.war
-
-CMD ["/opt/tomcat/apache-tomcat-10.0.18/bin/catalina.sh", "run"]
+CMD ["./apache-tomcat-10.0.20/bin/catalina.sh", "run"]
