--- a/social-community-project/pom.xml
+++ b/social-community-project/pom.xml
@@ -61,6 +61,14 @@
             <version>6.0.0.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
