--- a/social-medium/bs-userinfo/pom.xml
+++ b/social-medium/bs-userinfo/pom.xml
@@ -31,6 +31,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
