--- a/social-medium/bs-userinfo/src/main/resources/application-dev.properties
+++ b/social-medium/bs-userinfo/src/main/resources/application-dev.properties
@@ -4,3 +4,10 @@ spring.datasource.username=postgres
 spring.datasource.password=secret
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+
+#show sql values
+logging.level.org.hibernate.type.descriptor.sql=trace
