OpenApi swagger definition added

--- a/social-medium/bs-userinfo/pom.xml
+++ b/social-medium/bs-userinfo/pom.xml
@@ -36,6 +36,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.9</version>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.springdoc</groupId>-->
+<!--            <artifactId>springdoc-openapi-security</artifactId>-->
+<!--            <version>1.6.9</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
