--- a/social-medium/bs-userinfo/src/main/resources/application.properties
+++ b/social-medium/bs-userinfo/src/main/resources/application.properties
@@ -1,2 +1,7 @@
+server.servlet.context-path=/
+spring.mvc.servlet.path=/
+
+springdoc.api-docs.path=/api-docs
+
 server.port=${SERVER_PORT}
 spring.profiles.active=${ACTIVE_PROFILE}
