Angular template integration, searching user and OpenApi Swagger configuration added

--- a/social-medium/app-social-medium/angular.json
+++ b/social-medium/app-social-medium/angular.json
@@ -7,10 +7,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": [
-            "css",
-            "scss"
-          ]
+          "style": "scss"
         }
       },
       "root": "",
@@ -31,11 +28,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/assets/css/bootstrap.min.css",
+              "src/assets/css/bootstrap.min.scss",
               "src/styles.scss"
             ],
             "scripts": [
-              "src/assets/js/bootstrap.bundle.min.js"
+              "src/assets/js/jquery.min.js",
+              "src/assets/js/popper.min.js",
+              "src/assets/js/bootstrap.min.js"
             ]
           },
           "configurations": {
