--- a/social-medium/bs-userinfo/src/main/resources/application.properties
+++ b/social-medium/bs-userinfo/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.mvc.servlet.path=/
 
 springdoc.api-docs.path=/api-docs
 
+cross.origin=http://localhost:4200
+
 server.port=${SERVER_PORT}
 spring.profiles.active=${ACTIVE_PROFILE}
