suggestion list generating and fetching, add connection

--- a/social-medium/bs-userinfo/docker-compose.yml
+++ b/social-medium/bs-userinfo/docker-compose.yml
@@ -1,30 +1,30 @@
 version: '3.8'
 services:
-  bs-userinfo:
-    container_name: 'bs-userinfo'
-    image: 'social-medium/bs-userinfo'
-    build: ./
-    ports:
-      - '8581:8581'
-    depends_on:
-      - userinfo_db
-    command: mvn clean spring-boot:run
-    # Pass environment variables to the service
-    environment:
-      # The inside port will be used by the dependent services
-      SPRING_DATASOURCE_HOST: userinfo_db
-      SPRING_DATASOURCE_DB: userinfo
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: secret
-      SPRING_DATASOURCE_DB_PORT: 5432
-      SERVER_PORT: 8581
-      ACTIVE_PROFILE: dev
-    networks:
-      - social_medium
-    volumes:
-      - type: volume
-        source: vol_userinfo
-        target: "/home/mainul35/Documents/userinfo/static/resources"
+#  bs-userinfo:
+#    container_name: 'bs-userinfo'
+#    image: 'social-medium/bs-userinfo'
+#    build: ./
+#    ports:
+#      - '8581:8581'
+#    depends_on:
+#      - userinfo_db
+#    command: mvn clean spring-boot:run
+#    # Pass environment variables to the service
+#    environment:
+#      # The inside port will be used by the dependent services
+#      SPRING_DATASOURCE_HOST: userinfo_db
+#      SPRING_DATASOURCE_DB: userinfo
+#      SPRING_DATASOURCE_USERNAME: postgres
+#      SPRING_DATASOURCE_PASSWORD: secret
+#      SPRING_DATASOURCE_DB_PORT: 5432
+#      SERVER_PORT: 8581
+#      ACTIVE_PROFILE: dev
+#    networks:
+#      - social_medium
+#    volumes:
+#      - type: volume
+#        source: vol_userinfo
+#        target: "/home/mainul35/Documents/userinfo/static/resources"
   userinfo_db:
     image: 'postgres'
     container_name: 'userinfo_container'
@@ -42,8 +42,22 @@ services:
       - social_medium
     extra_hosts:
       - 'qaboard_network:192.168.1.100'
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: social_community_user
+      RABBITMQ_DEFAULT_PASS: secret
+    ports:
+      - 5672:5672
+      - 15672:15672
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    ports:
+      - 9411:9411
 volumes:
   vol_userinfo:
 networks:
   social_medium:
-
+    driver: bridge
