--- a/social-medium/bs-userinfo/src/main/resources/application.properties
+++ b/social-medium/bs-userinfo/src/main/resources/application.properties
@@ -5,5 +5,12 @@ springdoc.api-docs.path=/api-docs
 
 cross.origin=http://localhost:4200
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=social_community_user
+spring.rabbitmq.password=secret
+
+#spring.main.allow-bean-definition-overriding=true
+
 server.port=${SERVER_PORT}
 spring.profiles.active=${ACTIVE_PROFILE}
