--- a/social-medium/bs-userinfo/pom.xml
+++ b/social-medium/bs-userinfo/pom.xml
@@ -48,6 +48,12 @@
 <!--            <artifactId>springdoc-openapi-security</artifactId>-->
 <!--            <version>1.6.9</version>-->
 <!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
