--- a/social-medium/bs-auth/pom.xml
+++ b/social-medium/bs-auth/pom.xml
@@ -8,14 +8,18 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.mainul35</groupId>
-    <artifactId>bs-userinfo</artifactId>
+    <artifactId>bs-auth</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>bs-userinfo</name>
-    <description>bs-userinfo</description>
-
-    <packaging>jar</packaging>
-
+    <name>bs-auth</name>
+    <description>bs-auth</description>
+    <properties>
+        <java.version>17</java.version>
+    </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -23,47 +27,30 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.6.9</version>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>org.springdoc</groupId>-->
-<!--            <artifactId>springdoc-openapi-security</artifactId>-->
-<!--            <version>1.6.9</version>-->
-<!--        </dependency>-->
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.36</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -74,22 +61,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
-                <configuration>
-                    <target>17</target>
-                    <source>17</source>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
@@ -99,14 +70,6 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>-Dspring.profiles.active=test -Dserver.port=8581</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -122,10 +85,9 @@
             <properties>
                 <maven.test.skip>true</maven.test.skip>
                 <active.profile>dev</active.profile>
-                <db.url>jdbc:postgresql://192.168.1.100:5433/userinfo</db.url>
+                <db.url>jdbc:postgresql://192.168.1.100:5435/bs_auth</db.url>
                 <db.password>secret</db.password>
                 <db.username>postgres</db.username>
-                <serverPort>8581</serverPort>
             </properties>
         </profile>
         <profile>
@@ -142,4 +104,5 @@
             </properties>
         </profile>
     </profiles>
+
 </project>
