--- a/social-medium/bff-social-medium/pom.xml
+++ b/social-medium/bff-social-medium/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mainul35</groupId>
+            <artifactId>bs-userinfo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
